--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Welcome to my website</h1>
+    Hello World 
+    <h2>Feb 20</h2>                                         
 </body>
 </html>
