--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <h1 style="color:blue;">Welcome to my website</h1>
     Hello World 
     <h2>Feb 20,2021</h2>                                         
 </body>
